--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
-    "@ngrx/component": "^16.0.1",
-    "@ngrx/component-store": "^16.0.1",
+    "@ngrx/component": "^17.0.0-rc.0",
+    "@ngrx/component-store": "^17.0.0-rc.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
